fix homepage spacing and font size

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -62,6 +62,8 @@ body {
 	width: 100%;
 	display: inherit;
 
+	font-size: 14px;
+
 	img {
 	    margin-top: 5px;
 	}
